# lcl-viz

./: .gitignore  Cargo.toml  deploy.sh  index.html  index.js  package.json  style.scss
src/: fivecolor.rs  grid.rs  lib.rs  main.rs  necklace.rs  no_ids.rs
src/necklace/: neighborhoods.rs  no_ids.rs  utils.rs  with_ids.rs
