[package]
name = "lcl-viz"
version = "0.1.0"
authors = ["Joonatan Saarhelo <joonatan.saarhelo@aalto.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = {version = "0.2.73", features = ["nightly"]}
rand = {version = "0.8", default-features = false, features = ["std_rng"]}
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Window',
]

[profile.release]
lto = true
